tests/compile_fail/unknown_type_attr.stderr
error: unknown angelscript attribute 'unknown_attr'. Valid attributes are: name, value, pod, reference, scoped, nocount, nohandle, as_handle, template, specialization_of, specialization_args
 --> tests/compile_fail/unknown_type_attr.rs:6:15
  |
6 | #[angelscript(unknown_attr)]
  |               ^^^^^^^^^^^^
